<resources>
    <string name="app_name">VM announcement</string>
    <string name="search_announcements">Search announcements</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_saved">Saved</string>
    <string name="menu_item_settings">Settings</string>
    <string name="display_settings">Display settings</string>
    <string name="time_to_display">Time to display</string>
    <string name="show">Show</string>
    <string name="date_to_search">Date to search</string>
    <string name="send_announcements">Send announcements</string>
    <string name="setup_telegram_bot">Setup telegram bot</string>
    <string name="save_announcements_report">Save announcements report</string>
    <string name="bot_token">Bot token</string>
    <string name="chat_id">Chat id</string>
    <string name="save_telegram_bot">Save telegram bot</string>
    <string name="message_sent">Announcements report message sent.</string>
    <string name="line_not_found">Line not found.</string>
    <string name="report_saved">Announcements report saved.</string>
    <string name="bot_error">Telegram bot is not configured.</string>
    <string name="bot_invalid">Invalid configured input:</string>
</resources>